docs/envoy/v1.24.3/_sources/intro/arch_overview/security/external_dep_build.rst.txt
External dependencies: ``build``
================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Apple Rules for Bazel <https://github.com/bazelbuild/rules_apple>`__, `1.1.2 <https://github.com/bazelbuild/rules_apple/releases/tag/1.1.2>`__, 2022-09-16, , `Apache-2.0 <https://github.com/bazelbuild/rules_apple/blob/1.1.2/LICENSE>`__
  `Aspect Bazel helpers <https://github.com/aspect-build/bazel-lib>`__, `1.12.0 <https://github.com/aspect-build/bazel-lib/releases/tag/v1.12.0>`__, 2022-09-16, , `Apache-2.0 <https://github.com/aspect-build/bazel-lib/blob/v1.12.0/LICENSE>`__
  `bazel-compilation-database <https://github.com/grailbio/bazel-compilation-database>`__, `0.5.2 <https://github.com/grailbio/bazel-compilation-database/releases/tag/0.5.2>`__, 2021-09-10, , `Apache-2.0 <https://github.com/grailbio/bazel-compilation-database/blob/0.5.2/LICENSE>`__
  `bazel-toolchains <https://github.com/bazelbuild/bazel-toolchains>`__, `5.1.1 <https://github.com/bazelbuild/bazel-toolchains/releases/tag/v5.1.1>`__, 2021-11-30, , `Apache-2.0 <https://github.com/bazelbuild/bazel-toolchains/blob/v5.1.1/LICENSE>`__
  `envoy-build-tools <https://github.com/envoyproxy/envoy-build-tools>`__, `c9eabcc <https://github.com/envoyproxy/envoy-build-tools/tree/c9eabcc8dde026715b35f262e30ba628bab5976c>`__, 2023-01-21, , `Apache-2.0 <https://github.com/envoyproxy/envoy-build-tools/blob/c9eabcc8dde026715b35f262e30ba628bab5976c/LICENSE>`__
  `Gazelle <https://github.com/bazelbuild/bazel-gazelle>`__, `0.26.0 <https://github.com/bazelbuild/bazel-gazelle/releases/tag/v0.26.0>`__, 2022-06-26, , `Apache-2.0 <https://github.com/bazelbuild/bazel-gazelle/blob/v0.26.0/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.35.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.35.0>`__, 2022-09-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.35.0/LICENSE.txt>`__
  `Packaging rules for Bazel <https://github.com/bazelbuild/rules_pkg>`__, `0.7.0 <https://github.com/bazelbuild/rules_pkg/releases/tag/0.7.0>`__, 2022-04-07, , `Apache-2.0 <https://github.com/bazelbuild/rules_pkg/blob/0.7.0/LICENSE>`__
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `0.12.0 <https://github.com/bazelbuild/rules_python/releases/tag/0.12.0>`__, 2022-08-29, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/0.12.0/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.8.0 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.8.0>`__, 2022-04-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.8.0/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `0.0.3 <https://github.com/bazelbuild/rules_license/releases/tag/0.0.3>`__, 2022-05-28, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/0.0.3/LICENSE>`__
  `Shellcheck rules for bazel <https://github.com/aignas/rules_shellcheck>`__, `0.1.1 <https://github.com/aignas/rules_shellcheck/releases/tag/v0.1.1>`__, 2022-05-30, , `MIT <https://github.com/aignas/rules_shellcheck/blob/v0.1.1/LICENSE>`__

